--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,12 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+    ext {
+        roomVersion = '2.2.1'
+        archLifecycleVersion = '2.2.0'
+        coreTestingVersion = '2.1.0'
+        materialVersion = '1.0.0'
+    }
 }
 
 allprojects {
