--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,18 +9,27 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.C196ProjectDanAdams">
-        <activity android:name=".ui.assessments.AssessmentEditActivity"
+        <receiver
+            android:name=".util.Receiver"
+            android:enabled="true"
+            android:exported="true"></receiver>
+
+        <activity
+            android:name=".ui.assessments.AssessmentEditActivity"
             android:label="Assessment"
-            android:parentActivityName=".ui.courses.CourseEditAssessmentListActivity"/>
-        <activity android:name=".ui.courses.CourseEditAssessmentListActivity"
+            android:parentActivityName=".ui.courses.CourseEditAssessmentListActivity" />
+        <activity
+            android:name=".ui.courses.CourseEditAssessmentListActivity"
             android:label="Course and Assessments"
-            android:parentActivityName=".ui.terms.TermEditCourseListActivity"/>
-        <activity android:name=".ui.terms.TermEditCourseListActivity"
+            android:parentActivityName=".ui.terms.TermEditCourseListActivity" />
+        <activity
+            android:name=".ui.terms.TermEditCourseListActivity"
             android:label="Term and Courses"
-            android:parentActivityName=".ui.terms.TermListActivity"/>
-        <activity android:name=".ui.terms.TermListActivity"
+            android:parentActivityName=".ui.terms.TermListActivity" />
+        <activity
+            android:name=".ui.terms.TermListActivity"
             android:label="Terms"
-            android:parentActivityName=".ui.HomePageActivity"/>
+            android:parentActivityName=".ui.HomePageActivity" />
         <activity android:name=".ui.HomePageActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
